# libpz

./: .gitignore  ARCHITECTURE.md  BENCHMARK_REPORT.md  BUGS.md  CLAUDE.md  Cargo.toml  GPU_BACKEND_MIGRATION_EVAL.md  Makefile.am  PHASE1-PLAN.md  PLAN-gpu-backpressure.md  PLAN.md  README.md  bbwt_algorithm.md  bench_compare.sh  bench_vs_gzip.sh  compression-notes.md  configure.ac  libtool
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: benchmarker.md  historian.md  maintainer.md  tester.md  tooling.md
.claude/feedback/: 2026-02-15-branch-hygiene-and-commit-body-preference.md  2026-02-15-pr-review-to-north-star-workflow.md  2026-02-16-north-star-followups.md  2026-03-01-gpu-hash-tables-dont-work.md  2026-03-01-gpu-rans-kernels-exist-and-are-slower.md  2026-03-01-gpu-wins-on-lz77-loses-on-entropy.md  2026-03-01-lzseq-is-the-right-pipeline-family.md  2026-03-01-per-stream-overhead-math.md  2026-03-01-ratio-gap-is-encoding-not-matching.md
.claude/friction/: 2026-02-14-heredoc-commit-permission-prompts.md  2026-02-15-benchmark-baseline-drift-and-shell-quoting.md  2026-02-15-plan-mode-blocks-feedback-writes.md  2026-03-07-wgsl-unaligned-u32-tdr.md  manually-copied-by-a-human.md
.claude/hooks/: session-start.sh
.claude/index/: COMPLETION_REPORT.md  README.md  SUMMARY.txt  gpu-batching.md  pipeline-architecture.md
.claude/plans/: 2026-02-15-lzr-pareto-frontier-plan.md  README.md  TODO-huffman-sync-decode.md  upgrade-wgpu-to-27.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: gpu_parallel_vs_streaming.rs  rans_decode_bench.rs  stages.rs  stages_analysis.rs  stages_auto_select.rs  stages_bbwt.rs  stages_bwt.rs  stages_common.rs  stages_deflate_webgpu_chained.rs  stages_fse.rs  stages_gpu_experiments.rs  stages_gpulz.rs  stages_huffman.rs  stages_lz77.rs  stages_lz78.rs  stages_lz_comparison.rs  stages_lz_plus_fse.rs  stages_lzss.rs  stages_match_finders.rs  stages_mtf.rs  stages_rans.rs  stages_rle.rs  stages_simd.rs  throughput.rs  throughput_bbw.rs  throughput_bw.rs  throughput_common.rs  throughput_deflate.rs  throughput_lzf.rs  throughput_lzfi.rs  throughput_lzr.rs  throughput_lzseqr.rs
docs/: DESIGN.md  QUALITY.md  wire-formats.md
docs/design-docs/: core-beliefs.md  experiments.md  gpu-batching.md  gpu-experiments-wave2-conclusions.md  gpu-experiments-wave2.md  gpu-recoil-findings.md  gpu-strategy.md  gpulz-experiment-findings.md  index.md  lz77-gpu.md  nvcomp-analysis.md  optimal-parsing.md  pipeline-architecture.md  research-log.md
docs/design-plans/: 2026-02-22-pareto-competitiveness.md
docs/exec-plans/: BENCHMARK-GPU-vs-CPU-LZSEQR-2026-02-21.md  tech-debt-tracker.md
examples/: bench_recoil.rs  block_size_experiment.rs  bw_blocksize.rs  coop_test.rs  decode_profile.rs  explore_pipelines.rs  gpu_benchmark_compare.rs  gpu_compare.rs  lz77_diag.rs  match_quality.rs  mtf1_eval.rs  pipeline_comparison.rs  profile.rs  profile_decode.rs  slz_debug.rs  sortlz_lzseq_eval.rs  sortlz_neighbor_eval.rs  webgpu_diag.rs  webgpu_profile.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bwt.rs  fuzz_decompress.rs  fuzz_fse.rs  fuzz_huffman.rs  fuzz_lz77.rs  fuzz_lz78.rs  fuzz_lzseq.rs  fuzz_lzss.rs  fuzz_mtf.rs  fuzz_pipeline_roundtrip.rs  fuzz_rans.rs  fuzz_rle.rs
include/: codec.h  frequency.h  huffman.h  lz77.h
kernels/: bitplane_transpose.wgsl  bwt_radix.cl  bwt_radix.wgsl  bwt_rank.cl  bwt_rank.wgsl  bwt_sort.cl  fse_decode.cl  fse_decode.wgsl  fse_decode_blocks.cl  fse_decode_blocks.wgsl  fse_encode.cl  fse_encode.wgsl  fwst_radix.wgsl  huffman_decode.wgsl  huffman_encode.cl  huffman_encode.wgsl  lz77.cl  lz77.wgsl  lz77_batch.cl  lz77_batch.wgsl  lz77_coop.wgsl  lz77_decode.cl  lz77_decode.wgsl  lz77_hash.cl  lz77_hash.wgsl  lz77_hash_short.cl  lz77_hash_sweep.cl  lz77_lazy.wgsl  lz77_local.wgsl  lz77_topk.cl  lz77_topk.wgsl  lzseq_demux.wgsl  lzw_decode.cl  parlz_resolve.wgsl  rans_decode.cl  rans_decode.wgsl  rans_decode_blocks.cl  rans_decode_blocks.wgsl  rans_encode.wgsl  repair_ops.wgsl  (+2 more)
libpz-rs/: Cargo.toml
libpz-rs/kernels/: lz77_batch.cl
libpz-rs/src/: bwt.rs  crc32.rs  deflate.rs  ffi.rs  frequency.rs  gzip.rs  huffman.rs  lib.rs  lz77.rs  mtf.rs  pipeline.rs  rle.rs  validation.rs
opencl/: Makefile.am  engine.c  engine.h  lz77-batch.cl  lz77.cl  opencl_test.c  test.c
profiling/: .gitignore
reference/: Makefile.am  frequency.c  huffman.c  lz77.c  lz77.h  pqueue.c  pqueue.h
samples/: Makefile.am
scripts/: analyze-ratio.sh  bench.sh  cargo-msvc.ps1  fetch-silesia.sh  gpu-experiment-bench.sh  gpu-meminfo.sh  perf-gate.sh  profile.sh  run_experiments.sh  samply-top-symbols.sh  setup.sh  test-targets.sh  test.sh  trace-pipeline.sh  webgpu_profile.sh
src/: Makefile.am  analysis.rs  bitplane.rs  bwt.rs  crc32.rs  csbwt.rs  deflate.rs  ffi.rs  frequency.rs  fse.rs  fwst.rs  gpu_common.rs  gpu_cost.rs  gpulz.rs  gzip.rs  huffman.rs  lib.rs  lz77.c  lz77.h  lz77.rs  lz78.rs  lz78_static.rs  lz_token.rs  lzseq.rs  lzss.rs  matrix_compress.rs  mtf.rs  opencl.rs  optimal.rs  parlz.rs  pipeline.rs  pqueue.rs  rangecoder.rs  rans.rs  recoil.rs  repair.rs  rle.rs  simd.rs  sortlz.rs  streaming.rs  (+3 more)
src/bwt/: mod.rs  tests.rs
src/fse/: mod.rs  tests.rs
src/gpu_cost/: mod.rs  tests.rs
src/huffman/: mod.rs  tests.rs
src/lz77/: mod.rs  tests.rs
src/lzseq/: mod.rs  seq2.rs  tests.rs
src/opencl/: bwt.rs  fse.rs  huffman.rs  lz77.rs  lz78.rs  mod.rs  rans.rs  tests.rs
src/pipeline/: blocks.rs  demux.rs  mod.rs  parallel.rs  parallel_tests.rs  stages.rs  telemetry.rs  tests.rs
src/rans/: mod.rs  tests.rs
src/simd/: mod.rs  tests.rs
src/webgpu/: bitplane.rs  buffers.rs  bwt.rs  csbwt.rs  fse.rs  fwst.rs  huffman.rs  kernels.rs  lz77.rs  lzseq.rs  mod.rs  parlz.rs  pipelines.rs  rans.rs  repair.rs  sortlz.rs  tests.rs
src/webgpu/tests/: bwt.rs  engine.rs  fse.rs  huffman.rs  lz77.rs  lzseq.rs  mod.rs  parlz.rs  pipelines.rs  rans.rs
test/: Makefile.am  frequency_test  frequency_test.c  huffman_fuzz  huffman_fuzz.c  huffman_test.c  lz77-reference.c  lz77_fuzz  lz77_fuzz.c  lz77_test.c
(+30 files in other folders)
