[package]
name = "libpz"
version = "0.1.0"
edition = "2021"
description = "Lossless data compression library with GPU acceleration"

[lib]
name = "pz"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
opencl3 = { version = "0.9", optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[[bin]]
name = "pz"
path = "src/bin/pz.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "stages"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[features]
default = []
opencl = ["dep:opencl3"]
webgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
