[package]
name = "pz"
version = "0.1.0"
edition = "2021"
description = "Lossless data compression library with GPU acceleration"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
wgpu = { version = "27", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
wgpu-profiler = { version = "0.25", optional = true }

[[bin]]
name = "pz"
path = "src/bin/pz.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "stages"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[features]
default = ["webgpu"]
webgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:wgpu-profiler"]
