[package]
name = "libpz"
version = "0.1.0"
edition = "2021"
description = "Lossless data compression library with GPU acceleration"

[lib]
name = "pz"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
opencl3 = { version = "0.9", optional = true }

[dev-dependencies]

[features]
default = []
opencl = ["dep:opencl3"]
